--- a/.gitmodules
+++ b/.gitmodules
@@ -61,3 +61,6 @@
 [submodule "bundle/vcscommand"]
 	path = bundle/vcscommand
 	url = https://github.com/vim-scripts/vcscommand.vim.git
+[submodule "bundle/PIV"]
+	path = bundle/PIV
+	url = https://github.com/spf13/PIV.git
